csv file reader for initial class inserting into database